# vrpr

./: Cargo.toml  README.md
datasets/: dvrptw-setting.txt
datasets/100/: h100c101.csv  h100c102.csv  h100c103.csv  h100c104.csv  h100c105.csv  h100c106.csv  h100c107.csv  h100c108.csv  h100c109.csv  h100c201.csv  h100c202.csv  h100c203.csv  h100c204.csv  h100c205.csv  h100c206.csv  h100c207.csv  h100c208.csv  h100r101.csv  h100r102.csv  h100r103.csv  h100r104.csv  h100r105.csv  h100r106.csv  h100r107.csv  h100r108.csv  h100r109.csv  h100r110.csv  h100r111.csv  h100r112.csv  h100r201.csv  h100r202.csv  h100r203.csv  h100r204.csv  h100r205.csv  h100r206.csv  h100r207.csv  h100r208.csv  h100r209.csv  h100r210.csv  h100r211.csv  (+16 more)
datasets/1000/: h1000C1_10_1.csv  h1000C1_10_10.csv  h1000C1_10_2.csv  h1000C1_10_3.csv  h1000C1_10_4.csv  h1000C1_10_5.csv  h1000C1_10_6.csv  h1000C1_10_7.csv  h1000C1_10_8.csv  h1000C1_10_9.csv  h1000C2_10_1.csv  h1000C2_10_10.csv  h1000C2_10_2.csv  h1000C2_10_3.csv  h1000C2_10_4.csv  h1000C2_10_5.csv  h1000C2_10_6.csv  h1000C2_10_7.csv  h1000C2_10_8.csv  h1000C2_10_9.csv  h1000R1_10_1.csv  h1000R1_10_10.csv  h1000R1_10_2.csv  h1000R1_10_3.csv  h1000R1_10_4.csv  h1000R1_10_5.csv  h1000R1_10_6.csv  h1000R1_10_7.csv  h1000R1_10_8.csv  h1000R1_10_9.csv  h1000R2_10_1.csv  h1000R2_10_10.csv  h1000R2_10_2.csv  h1000R2_10_3.csv  h1000R2_10_4.csv  h1000R2_10_5.csv  h1000R2_10_6.csv  h1000R2_10_7.csv  h1000R2_10_8.csv  h1000R2_10_9.csv  (+20 more)
src/: main.rs
src/gp/: mod.rs  program.rs
src/log/: mod.rs
src/sim/: ctx.rs  mod.rs  problem.rs
